# proedge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  prometheus.yml  pyproject.toml  seed_predictions.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_clv_columns.py  003_add_alert_records.py
databricks/: 01_ingestion.py  02_feature_engineering.py  03_training.py  04_drift_retraining.py
grafana/dashboards/: dashboards.yaml  proedge.json
src/proedge/: config.py
src/proedge/api/: main.py  schemas.py
src/proedge/api/middleware/: auth.py
src/proedge/api/routers/: backtest.py  health.py  lines.py  performance.py  predictions.py  training.py
src/proedge/api/static/: dashboard.html
src/proedge/db/: __init__.py  models.py  repositories.py  session.py
src/proedge/monitoring/: alerts.py  metrics.py
src/proedge/pipeline/backtesting/: backtester.py
src/proedge/pipeline/features/: advanced.py  fatigue.py  matchup.py  rolling.py  store.py
src/proedge/pipeline/ingestion/: client.py  daily_updater.py  espn_nfl_fetcher.py  historical.py  injuries.py  mlb_stats_fetcher.py  nba_fetcher.py  odds_fetcher.py  prizepicks_fetcher.py  stats.py  utils.py
src/proedge/pipeline/models/: calibration.py  drift.py  ensemble.py  registry.py
src/proedge/pipeline/training/: trainer.py
tests/: conftest.py  test_alerts_unit.py  test_api.py  test_backtest_router.py  test_backtester.py  test_daily_updater.py  test_daily_updater_db.py  test_features.py  test_fetchers.py  test_lines_router.py  test_models.py  test_trainer.py  test_training_router.py  test_utils.py
