[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proedge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "joblib>=1.4.0",
    "scipy>=1.13.0",
    "psutil>=5.9.8",
    "geopy>=2.4.1",
    "psycopg2-binary>=2.9.9",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
